# public/swagger.json
@@ -129,6 +129,46 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"LoginRes": {
+				"properties": {
+					"tokey_key": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"tokey_key",
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LoginReq": {
+				"properties": {
+					"username": {
+						"type": "string",
+						"enum": [
+							"admin"
+						],
+						"nullable": false
+					},
+					"password": {
+						"type": "string",
+						"enum": [
+							"admin@123"
+						],
+						"nullable": false
+					}
+				},
+				"required": [
+					"username",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"SaveResPizza": {
 				"properties": {
 					"_id": {
@@ -185,7 +225,13 @@
 				"additionalProperties": false
 			}
 		},
-		"securitySchemes": {}
+		"securitySchemes": {
+			"api_key": {
+				"type": "apiKey",
+				"name": "token",
+				"in": "header"
+			}
+		}
 	},
 	"info": {
 		"title": "pizza",
@@ -307,8 +353,44 @@
 				"tags": [
 					"order"
 				],
-				"security": [],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
 				"parameters": []
+			}
+		},
+		"/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/LoginRes"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Login"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/LoginReq"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/pizza/savepizza": {
