# src/types/request/login.request.ts
@@ -1,0 +1,4 @@
+export interface LoginReq {
+    username: "admin",
+    password: "admin@123"
+}
