# src/types/response/login.response.ts
@@ -1,0 +1,4 @@
+export interface LoginRes {
+    tokey_key: string,
+    message: string
+}
